[tool.poetry]
name = "contestdojo-api"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
firebase-admin = "^6.1.0"
starlette = "^0.26.1"
marshmallow = "^3.19.0"
marshmallow-union = "^0.1.15.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
