[project]
name = "contestdojo-api"
version = "0.1.0"
description = ""
authors = [{name = "Oliver Ni", email = "oliver.ni@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard]>=0.21.1",
    "firebase-admin>=6.1.0",
    "starlette>=0.26.1",
    "marshmallow>=3.19.0",
    "marshmallow-union>=0.1.15.post1",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contestdojo_api"]

[tool.black]
line-length = 100
